--- a/src/components/Photo/style.scss
+++ b/src/components/Photo/style.scss
@@ -1,16 +1,20 @@
 $photo-width: 300px;
 
+@function normalize($val) {
+  @return $photo-width * $val / 300px;
+}
+
 $default-transform: translate(0, 0) rotate(0) scale(1);
-$default-red-wrapper-transform: translate(120px, -160px) rotate(8.53deg) scale(1);
-$red-wrapper-transform: translate(176px, -200px) rotate(8.53deg) scale(1.2);
-$default-red-filter-transform: translate(-95px, 176px) rotate(-8.53deg) scale(1);
-$red-filter-transform: translate(-80px, 183px) rotate(2deg) scale(1.3);
-$bw-wrapper-transform: translate(-$photo-width * 210 / 300, 0) rotate(8.53deg) scale(1.2);
-$bw-filter-transform: translate($photo-width * 100 / 300, -$photo-width * 20 / 300) rotate(-8.53deg) scale(0.9);
-$default-teal-wrapper-transform: translate(63px, 220px) rotate(8.53deg) scale(1);
-$teal-wrapper-transform: translate(108px, 250px) rotate(8.53deg) scale(1.2);
-$default-teal-filter-transform: translate(-95px, -208px) rotate(-8.53deg) scale(1);
-$teal-filter-transform: translate(-144px, -226px) rotate(-21deg) scale(1.3);
+$default-red-wrapper-transform: translate(normalize(120px), normalize(-160px)) rotate(8.53deg) scale(1);
+$red-wrapper-transform: translate(normalize(176px), normalize(-200px)) rotate(8.53deg) scale(1.2);
+$default-red-filter-transform: translate(normalize(-95px), normalize(176px)) rotate(-8.53deg) scale(1);
+$red-filter-transform: translate(normalize(-80px), normalize(183px)) rotate(2deg) scale(1.3);
+$bw-wrapper-transform: translate(normalize(-210px), normalize(0px)) rotate(8.53deg) scale(1.2);
+$bw-filter-transform: translate(normalize(100px), normalize(-20px)) rotate(-8.53deg) scale(0.9);
+$default-teal-wrapper-transform: translate(normalize(63px), normalize(220px)) rotate(8.53deg) scale(1);
+$teal-wrapper-transform: translate(normalize(108px), normalize(250px)) rotate(8.53deg) scale(1.2);
+$default-teal-filter-transform: translate(normalize(-95px), normalize(-208px)) rotate(-8.53deg) scale(1);
+$teal-filter-transform: translate(normalize(-144px), normalize(-226px)) rotate(-21deg) scale(1.3);
 
 
 
@@ -23,12 +27,44 @@ $teal-filter-transform: translate(-144px, -226px) rotate(-21deg) scale(1.3);
   overflow: hidden;
   position: relative;
   box-shadow: 16px 16px 8px rgba(0,0,0,0.25);
+  &:hover {
+    #bw-wrapper {
+      transform: $default-transform;
+      border-width: 0;
+    }
+    #bw-filter {
+      transform: $default-transform;
+      filter: grayscale(0);
+    }
+    #red-wrapper {
+      transform: $default-red-wrapper-transform;
+      border-width: 0;
+    }
+    #red-filter {
+      transform: $default-red-filter-transform;
+    }
+    #red-placeholder {
+      background-color: #ff000000
+    }
+    #teal-wrapper {
+      transform: $default-teal-wrapper-transform;
+      border-width: 0;
+    }
+    #teal-filter {
+      transform: $default-teal-filter-transform;
+    }
+    #teal-placeholder {
+      background-color: #00ffff00
+    }
+  }
 }
 
 #original-photo {
   position: relative;
   left: 0;
   top: 0;
+  width: $photo-width;
+  height: $photo-width * 4 / 3;
 }
 
 .img-filter-wrapper {
@@ -41,10 +77,17 @@ $teal-filter-transform: translate(-144px, -226px) rotate(-21deg) scale(1.3);
   box-sizing: border-box;
 }
 
+.img-filter {
+  width: $photo-width;
+  height: $photo-width * 4 / 3;
+}
+
 .animated-props {
   animation-iteration-count: infinite;
   animation-duration: 6s;
   transform-origin: center;
+  transition: all 1s ease,
+              border-width 0.5s ease-in;
 }
 
 @keyframes img-fiter-keyframes {
@@ -73,7 +116,9 @@ $teal-filter-transform: translate(-144px, -226px) rotate(-21deg) scale(1.3);
   left: 0;
   top: 0;
   overflow: hidden;
-  animation-name: bw-wrapper-keyframes;
+  transform: $bw-wrapper-transform;
+  border-width: normalize(4px);
+  // animation-name: bw-wrapper-keyframes;
 }
 
 #bw-filter {
@@ -81,8 +126,9 @@ $teal-filter-transform: translate(-144px, -226px) rotate(-21deg) scale(1.3);
   transform-origin: center;
   left: 0;
   top: 0;
-  // filter: grayscale(100%);
-  animation-name: bw-filter-keyframes;
+  filter: grayscale(100%);
+  transform: $bw-filter-transform;
+  // animation-name: bw-filter-keyframes;
 }
 
 #red-wrapper {
@@ -90,7 +136,9 @@ $teal-filter-transform: translate(-144px, -226px) rotate(-21deg) scale(1.3);
   left: 0;
   top: 0;
   overflow: hidden;
-  animation-name: red-wrapper-keyframes;
+  transform: $red-wrapper-transform;
+  border-width: normalize(4px);
+  // animation-name: red-wrapper-keyframes;
 }
 
 #red-filter {
@@ -99,13 +147,15 @@ $teal-filter-transform: translate(-144px, -226px) rotate(-21deg) scale(1.3);
   left: 0;
   top: 0;
   mix-blend-mode: darken;
-  animation-name: red-filter-keyframes;
+  transform: $red-filter-transform;
+  // animation-name: red-filter-keyframes;
 }
 
 #red-placeholder {
   mix-blend-mode: darken;
   z-index: 100;
-  animation-name: red-placeholder-keyframes;
+  background-color: #ff0000
+  // animation-name: red-placeholder-keyframes;
 }
 
 #teal-wrapper {
@@ -113,16 +163,19 @@ $teal-filter-transform: translate(-144px, -226px) rotate(-21deg) scale(1.3);
   left: 0;
   top: 0;
   overflow: hidden;
-  animation-name: teal-wrapper-keyframes;
+  // animation-name: teal-wrapper-keyframes;
+  transform: $teal-wrapper-transform;
+  border-width: normalize(4px);
 }
 
 #teal-filter {
   position: absolute;
-  animation-name: teal-filter-keyframes;
+  // animation-name: teal-filter-keyframes;
   transform-origin: center;
   left: 0;
   top: 0;
   mix-blend-mode: darken;
+  transform: $teal-filter-transform;
 }
 
 #teal-placeholder {
@@ -130,7 +183,7 @@ $teal-filter-transform: translate(-144px, -226px) rotate(-21deg) scale(1.3);
   background-color: #00FFFF;
   mix-blend-mode: darken;
   z-index: 100;
-  animation-name: teal-placeholder-keyframes;
+  // animation-name: teal-placeholder-keyframes;
 }
 
 @keyframes red-wrapper-keyframes {
@@ -146,11 +199,11 @@ $teal-filter-transform: translate(-144px, -226px) rotate(-21deg) scale(1.3);
   }
   25% {
     transform: $red-wrapper-transform;
-    border-width: 4px;
+    border-width: normalize(4px);
   }
   75% {
     transform: $red-wrapper-transform;
-    border-width: 4px;
+    border-width: normalize(4px);
   }
   82% {
     border-width: 0;
@@ -225,11 +278,11 @@ $teal-filter-transform: translate(-144px, -226px) rotate(-21deg) scale(1.3);
   }
   25% {
     transform: $bw-wrapper-transform;
-    border-width: 4px;
+    border-width: normalize(4px);
   }
   75% {
     transform: $bw-wrapper-transform;
-    border-width: 4px;
+    border-width: normalize(4px);
   }
   82% {
     border-width: 0;
@@ -284,11 +337,11 @@ $teal-filter-transform: translate(-144px, -226px) rotate(-21deg) scale(1.3);
   }
   25% {
     transform: $teal-wrapper-transform;
-    border-width: 4px;
+    border-width: normalize(4px);
   }
   75% {
     transform: $teal-wrapper-transform;
-    border-width: 4px;
+    border-width: normalize(4px);
   }
   82% {
     border-width: 0;
