--- a/src/components/CornerMenu/style.scss
+++ b/src/components/CornerMenu/style.scss
@@ -1,31 +1,65 @@
 $menu-color: #0099A3;
 $menu-color-active: #12c9d6;
 $circle-size: 300px;
-$subcircle-size: 100px;
+$no-shadow: 0 0 0 0;
+$menu-shadow: 4px 4px 6px 4px rgba(0,0,0,0.25);
+$sub-menu-shadow: 3px 3px 6px 0 rgba(0,0,0,0.25);
+$dist-from-circle: 1;
+$sub-menu-open-transition-curve: cubic-bezier(0, 0.32, 0.77, 1.35);
+
+@function normCirc($val) {
+  @return $circle-size * $val;
+}
+
+$subcircle-size: normCirc(0.2);
+
+button.circle, .sub-menu button {
+  border-radius: 50%;
+  border-width: 0;
+  background-color: $menu-color;
+  cursor: pointer;
+  color:white;
+
+  &:active {
+    background-color: $menu-color-active;
+    -webkit-box-shadow: $no-shadow;
+    box-shadow: $no-shadow;
+  }
+}
+
+.bg-overlay {
+  display: none;
+  background-color: #0000;
+  position: fixed;
+  z-index: 5;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  transition: ease 0s background-color;
+}
+
+.open + .bg-overlay {
+  display: inline-block;
+  background-color: #000d;
+  z-index:1;
+}
 
 .menu {
   position:fixed;
   top:0;
   left:0;
+  z-index: 15;
 
   .circle {
-    border-radius: 50%;
-    border-width: 0;
     width:$circle-size;
     height:$circle-size;
-    background-color: $menu-color;
     position: absolute;
     top: -$circle-size / 2;
     left: -$circle-size / 2;
-    -webkit-box-shadow: 4px 4px 6px 4px rgba(0,0,0,0.25); 
-    box-shadow: 4px 4px 6px 4px rgba(0,0,0,0.25);
-    cursor: pointer;
     z-index: 10;
-
-    &:active {
-      background-color: $menu-color-active;
-      box-shadow: 0 0 0 0;
-    }
+    -webkit-box-shadow: $menu-shadow; 
+    box-shadow: $menu-shadow;
     
   
     .menu-text{
@@ -36,8 +70,6 @@ $subcircle-size: 100px;
       width:40%;
       height:40%;
       text-align: center;
-      color:white;
-      font-family: "Lato";
       font-size: 28px;
       align-items: center;
       justify-content: center;
@@ -45,18 +77,77 @@ $subcircle-size: 100px;
   }
   
   .sub-menu {
+    display:flex;
+    flex-direction: row;
     position:absolute;
     top: 100%;
     left:100%;
-    border-radius: 50%;
-    background-color: red;
+    width: max-content;
+    padding: 0 20px 0 0;
+    border-radius: $subcircle-size $subcircle-size $subcircle-size $subcircle-size;
     z-index: 5;
-    height: $subcircle-size;
-    width: $subcircle-size;
+    transition: linear 0.5s transform,
+                linear 1s background-color;
+    align-items: center;
+    background-color: #ffffff00;
+    color: white;
+    button {
+      display: inline;
+      height: $subcircle-size;
+      width: $subcircle-size;
+      flex: 0 0 auto;
+      -webkit-box-shadow: $sub-menu-shadow; 
+      box-shadow: $sub-menu-shadow;
+    }
+    span {
+      // color: black;
+      flex: 3 0 auto;
+      margin: 0 0 0 8px;
+      width:100%;
+      // text-align: center;
+      opacity: 0;
+      transition: ease 1s opacity;
+    }
   }
 
   &.open{
-    background-color: yellow;
+    .sub-menu {
+      // background-color: #ffffffaa;
+      span {
+        opacity: 1;
+      }
+    }
+    #sub-menu-1 {
+      transform: translate(normCirc(0*$dist-from-circle), normCirc(1*$dist-from-circle));
+      transition: $sub-menu-open-transition-curve 1s transform,
+                  $sub-menu-open-transition-curve 1s background-color;
+      span {
+        transition: ease 1s opacity;
+      }
+    }
+    #sub-menu-2 {
+      transform: translate(normCirc(0.5*$dist-from-circle), normCirc(0.866*$dist-from-circle));
+      transition: $sub-menu-open-transition-curve 1s transform 0.2s,
+                  $sub-menu-open-transition-curve 1s background-color 0.2s;
+      span {
+        transition: ease 1s opacity 0.2s;
+      }
+    }
+    #sub-menu-3 {
+      transform: translate(normCirc(0.866*$dist-from-circle), normCirc(0.5*$dist-from-circle));
+      transition: $sub-menu-open-transition-curve 1s transform 0.4s,
+                  $sub-menu-open-transition-curve 1s background-color 0.4s;
+      span {
+        transition: ease 1s opacity 0.4s;
+      }
+    }
+    #sub-menu-4 {
+      transform: translate(normCirc(1*$dist-from-circle), normCirc(0*$dist-from-circle));
+      transition: $sub-menu-open-transition-curve 1s transform 0.6s,
+                  $sub-menu-open-transition-curve 1s background-color 0.6s;
+      span {
+        transition: ease 1s opacity 0.6s;
+      }
+    }
   }
 }
-
