--- a/src/components/Gallery/GalleryItem/style.scss
+++ b/src/components/Gallery/GalleryItem/style.scss
@@ -4,9 +4,14 @@
   box-shadow: 8px 8px 12px 0px rgb(0 0 0 / 25%);
   margin: 20px;
   padding: 20px;
+  
   figcaption {
     font-size: 24px;
     text-align: center;
     max-width: 350px;
+  }
+
+  .tech-chips {
+    margin: 10px 0;
   }
 }
