--- a/src/components/Gallery/GalleryItem/style.scss
+++ b/src/components/Gallery/GalleryItem/style.scss
@@ -4,6 +4,7 @@
   box-shadow: 8px 8px 12px 0px rgb(0 0 0 / 25%);
   margin: 20px;
   padding: 20px;
+  cursor: pointer;
   
   figcaption {
     font-size: 24px;
