--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@use "./globals.scss";
+
 html {
   width: 100%;
 }
@@ -9,7 +11,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #CECECE;
+  background-color: globals.$bg-color;
   width:100%;
 }
 
