--- a/src/index.scss
+++ b/src/index.scss
@@ -19,3 +19,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h1, h2, h3, h4, h5, h6, p {
+  font-weight: inherit;
+	font-style: inherit;
+	font-size: 100%;
+	font-family: inherit;
+  margin: 0;
+  padding: 0;
+	vertical-align: baseline;
+}
+
+h2 {
+  font-size: 24px;
+}
