--- a/src/components/Gallery/GalleryItem/style.scss
+++ b/src/components/Gallery/GalleryItem/style.scss
@@ -25,8 +25,29 @@
   width: max-content;
 
   h2 {
+    color: globals.$primary-color;
     margin: 4px 0 8px;
     text-align: center;
+  }
+
+  .image-carousel {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    button {
+      background-color: globals.$primary-color;
+      border-radius: 18px;
+      height: 36px;
+      width: 36px;
+      color: globals.$secondary-color;
+      i {
+        height: 24px;
+        width: 24px;
+      }
+    }
+    img {
+      margin: 0 12px;
+    }
   }
 
   p {
