--- a/src/index.scss
+++ b/src/index.scss
@@ -33,3 +33,10 @@ h1, h2, h3, h4, h5, h6, p {
 h2 {
   font-size: 24px;
 }
+
+button {
+  background-color: globals.$primary-color;
+  border: 0;
+  color: globals.$secondary-color;
+  cursor: pointer;
+}
