Setup of gallery item popup. Linting and styling

--- a/src/components/Gallery/GalleryItem/Chip/style.scss
+++ b/src/components/Gallery/GalleryItem/Chip/style.scss
@@ -4,6 +4,7 @@
   background-color: globals.$primary-color;
   border-radius: 4px;
   color: white;
-  margin: 0 4px 0 0;
+  display: inline-block;
+  margin: 0 4px 4px 0;
   padding: 4px 8px;
 }
