--- a/src/components/Gallery/GalleryItem/style.scss
+++ b/src/components/Gallery/GalleryItem/style.scss
@@ -4,14 +4,18 @@
   background-color: white;
   border-radius: 12px;
   box-shadow: 8px 8px 12px 0px rgb(0 0 0 / 25%);
-  margin: 20px;
-  padding: 20px;
+  margin: 8px;
+  padding: 8px;
   cursor: pointer;
   
   figcaption {
-    font-size: 24px;
+    font-size: 16px;
     text-align: center;
     max-width: 350px;
+  }
+
+  img {
+    object-fit: contain;
   }
 
   .tech-chips {
@@ -45,8 +49,19 @@
         width: 24px;
       }
     }
-    img {
-      margin: 0 12px;
+    .image-wrapper {
+      --index: 0;
+      --width: 524px;
+      width: var(--width);
+      height: 500px;
+      overflow: hidden;
+      display: flex;
+      img {
+        margin: 0 12px;
+        object-fit: contain;
+        transition: transform 0.5s;
+        transform: translate(calc(var(--index) * var(--width) * -1), 0);
+      }
     }
   }
 
