--- a/src/components/Gallery/style.scss
+++ b/src/components/Gallery/style.scss
@@ -1,7 +1,19 @@
 .gallery {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr;
   justify-content: center;
   justify-items: center;
   width: min-content;
+}
+
+@media screen and ( min-width: 800px ) {
+  .gallery {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media screen and ( min-width: 1200px ) {
+  .gallery {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
