--- a/src/components/Gallery/GalleryItem/style.scss
+++ b/src/components/Gallery/GalleryItem/style.scss
@@ -13,9 +13,11 @@
     // --width: 250px;
     margin: 0;
     figcaption {
-      font-size: 16px;
-      text-align: center;
+      color: globals.$primary-color;
+      font-size: 20px;
       max-width: 350px;
+      margin-bottom: 12px;
+      text-align: center;
     }
   
     img {
