--- a/src/components/Photo/style.scss
+++ b/src/components/Photo/style.scss
@@ -16,11 +16,11 @@ $photo-width: $photo-standard * 1px;
   height: calc($photo-width * 4 / 3);
   width: $photo-width;
   box-sizing: border-box;
-  margin: 0 0 0 auto;
+  margin: 0 24px 0 auto;
   overflow: hidden;
   position: relative;
   box-shadow: 16px 16px 8px rgba(0,0,0,0.25);
-  flex: 0 0 $photo-width;
+  flex: 0 0 auto;
   &:hover {
     #bw-wrapper {
       --tx: 0px;
@@ -74,6 +74,12 @@ $photo-width: $photo-standard * 1px;
     #teal-placeholder {
       background-color: #00ffff00
     }
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .photo-wrapper {
+    margin: 40px auto 0;
   }
 }
 
