--- a/src/views/MainPage/style.scss
+++ b/src/views/MainPage/style.scss
@@ -1,6 +1,7 @@
 .main-page {
   .page-1 {
     display: flex;
+    flex-direction: row;
     max-width:1100px;
     box-sizing: border-box;
     margin: 100px auto;
@@ -13,5 +14,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .main-page {
+    .page-1 {
+      flex-direction: column;
+      margin: 100px 20px;
+    }
   }
 }
