--- a/src/views/MainPage/style.scss
+++ b/src/views/MainPage/style.scss
@@ -6,6 +6,10 @@
     box-sizing: border-box;
     margin: 100px auto;
     align-items: center;
+    .card-content {
+      display: flex;
+      align-items: center;
+    }
   }
 
   .page-2 {
