--- a/src/components/Gallery/GalleryItem/style.scss
+++ b/src/components/Gallery/GalleryItem/style.scss
@@ -1,11 +1,18 @@
 @use "../../../globals.scss";
 
 .gallery-item {
-  background-color: white;
+  background-color: globals.$card-bg-color;
   border-radius: 12px;
   box-shadow: 8px 8px 12px 0px rgb(0 0 0 / 25%);
   margin: 8px;
   padding: 24px;
+  color: white;
+  transform: scale(1);
+  transition: transform 100ms;
+
+  &.clickable:hover {
+    transform: scale(1.03);
+  }
 
   &.clickable {
     cursor: pointer;
@@ -18,7 +25,6 @@
     figcaption {
       color: globals.$primary-color;
       font-size: 20px;
-      max-width: 350px;
       margin-bottom: 12px;
       text-align: center;
     }
