--- a/src/views/MainPage/style.scss
+++ b/src/views/MainPage/style.scss
@@ -1,11 +1,14 @@
 .main-page {
   .page-1 {
     display: flex;
-    flex-direction: row;
-    max-width:1100px;
+    flex-direction: column-reverse;
+    gap: 24px;
+    text-align: center;
+    max-width: 1100px;
     box-sizing: border-box;
     margin: 100px auto;
     align-items: center;
+    justify-content: center;
     .card-content {
       display: flex;
       align-items: center;
@@ -24,8 +27,10 @@
 @media screen and (max-width: 600px) {
   .main-page {
     .page-1 {
-      flex-direction: column;
       margin: 100px 20px;
+      .card-content {
+        flex-direction: column;
+      }
     }
   }
 }
